{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 341,
  "lineage": "d1fd10de-747a-e228-5c9a-521426bf5e62",
  "resources": [
    {
      "module": "module.internet_gw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:internet-gateway/igw-06ade2b218c35c297",
            "id": "igw-06ade2b218c35c297",
            "owner_id": "579385932895",
            "region": "us-east-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9b38ade13086a31",
            "arn": "arn:aws:ec2:us-east-1:579385932895:elastic-ip/eipalloc-0d9b38ade13086a31",
            "domain": "vpc",
            "id": "eipalloc-0d9b38ade13086a31",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-240-99.compute-1.amazonaws.com",
            "public_ip": "44.198.240.99",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9b38ade13086a31",
            "association_id": "eipassoc-02de3b992db8572b6",
            "connectivity_type": "public",
            "id": "nat-0364e567cd819a45e",
            "network_interface_id": "eni-0e0ab68717a91dbc1",
            "private_ip": "10.0.1.178",
            "public_ip": "44.198.240.99",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb956ad37eff7d31",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b2f97ac092a9cbc",
            "region": "us-east-1",
            "route_table_id": "rtb-010088aaf52f923a0",
            "subnet_id": "subnet-0caaf1cf04ad959be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.private_rt.aws_route_table.private_rt",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ace2ef4adf6aa24",
            "region": "us-east-1",
            "route_table_id": "rtb-010088aaf52f923a0",
            "subnet_id": "subnet-03fa1dfe658926e66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.private_rt.aws_route_table.private_rt",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:route-table/rtb-010088aaf52f923a0",
            "id": "rtb-010088aaf52f923a0",
            "owner_id": "579385932895",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0364e567cd819a45e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "rtb-010088aaf52f923a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:security-group/sg-04f9f31eda1b06600",
            "description": "Allow HTTP, HTTPS and ssh inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f9f31eda1b06600",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250922051740257400000001",
            "name_prefix": "terraform-",
            "owner_id": "579385932895",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "sg-04f9f31eda1b06600",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/proxy-alb/633434bc47f2fdd9",
            "arn_suffix": "app/proxy-alb/633434bc47f2fdd9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "proxy-alb-882559360.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/proxy-alb/633434bc47f2fdd9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proxy-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b1cc3e20f2313f16"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b42e3872e33047d7"
              },
              {
                "subnet_id": "subnet-0bb956ad37eff7d31"
              }
            ],
            "subnets": [
              "subnet-0b42e3872e33047d7",
              "subnet-0bb956ad37eff7d31"
            ],
            "vpc_id": "vpc-0dbf62bb3b38d5610",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/proxy-alb/633434bc47f2fdd9"
          },
          "dependencies": [
            "module.public_sg.aws_security_group.public_sg",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:listener/app/proxy-alb/633434bc47f2fdd9/a07ab5ea1cef4b8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/proxy-tg/08b717b19b9daa28",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:579385932895:listener/app/proxy-alb/633434bc47f2fdd9/a07ab5ea1cef4b8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/proxy-alb/633434bc47f2fdd9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:listener/app/proxy-alb/633434bc47f2fdd9/a07ab5ea1cef4b8f"
          },
          "dependencies": [
            "module.proxy_alb.aws_lb.app_lb",
            "module.proxy_alb.aws_lb_target_group.app_tg",
            "module.public_sg.aws_security_group.public_sg",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/proxy-tg/08b717b19b9daa28",
            "arn_suffix": "targetgroup/proxy-tg/08b717b19b9daa28",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/proxy-tg/08b717b19b9daa28",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proxy-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/proxy-tg/08b717b19b9daa28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:route-table/rtb-0dec2edeb74a80f95",
            "id": "rtb-0dec2edeb74a80f95",
            "owner_id": "579385932895",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ade2b218c35c297",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "rtb-0dec2edeb74a80f95",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.internet_gw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:security-group/sg-0b1cc3e20f2313f16",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0b1cc3e20f2313f16",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "579385932895",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "sg-0b1cc3e20f2313f16",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "public_allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:security-group-rule/sgr-06d940503acf50986",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06d940503acf50986",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b1cc3e20f2313f16",
            "security_group_rule_id": "sgr-06d940503acf50986",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "sgr-06d940503acf50986",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.public_sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:security-group-rule/sgr-03e299d58a6524ad7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-03e299d58a6524ad7",
            "ip_protocol": "all",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b1cc3e20f2313f16",
            "security_group_rule_id": "sgr-03e299d58a6524ad7",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "sgr-03e299d58a6524ad7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.public_sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00966ef0c292b4f00",
            "region": "us-east-1",
            "route_table_id": "rtb-0dec2edeb74a80f95",
            "subnet_id": "subnet-0bb956ad37eff7d31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gw.aws_internet_gateway.igw",
            "module.public-rt.aws_route_table.public_rt",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0413af9a7cd88353a",
            "region": "us-east-1",
            "route_table_id": "rtb-0dec2edeb74a80f95",
            "subnet_id": "subnet-0b42e3872e33047d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gw.aws_internet_gateway.igw",
            "module.public-rt.aws_route_table.public_rt",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/service-alb/5696d78d0bd43860",
            "arn_suffix": "app/service-alb/5696d78d0bd43860",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-service-alb-1415252929.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/service-alb/5696d78d0bd43860",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "service-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04f9f31eda1b06600"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03fa1dfe658926e66"
              },
              {
                "subnet_id": "subnet-0caaf1cf04ad959be"
              }
            ],
            "subnets": [
              "subnet-03fa1dfe658926e66",
              "subnet-0caaf1cf04ad959be"
            ],
            "vpc_id": "vpc-0dbf62bb3b38d5610",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/service-alb/5696d78d0bd43860"
          },
          "dependencies": [
            "module.private_sg.aws_security_group.private_sg",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:listener/app/service-alb/5696d78d0bd43860/7d26c899cb27f19b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/service-tg/6b4ae3fa7361d1af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:579385932895:listener/app/service-alb/5696d78d0bd43860/7d26c899cb27f19b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:loadbalancer/app/service-alb/5696d78d0bd43860",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:listener/app/service-alb/5696d78d0bd43860/7d26c899cb27f19b"
          },
          "dependencies": [
            "module.private_sg.aws_security_group.private_sg",
            "module.service_alb.aws_lb.app_lb",
            "module.service_alb.aws_lb_target_group.app_tg",
            "module.subnet.aws_subnet.my_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/service-tg/6b4ae3fa7361d1af",
            "arn_suffix": "targetgroup/service-tg/6b4ae3fa7361d1af",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/service-tg/6b4ae3fa7361d1af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579385932895:targetgroup/service-tg/6b4ae3fa7361d1af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:subnet/subnet-0bb956ad37eff7d31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb956ad37eff7d31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579385932895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "subnet-0bb956ad37eff7d31",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:subnet/subnet-0b42e3872e33047d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b42e3872e33047d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579385932895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "subnet-0b42e3872e33047d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:subnet/subnet-0caaf1cf04ad959be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caaf1cf04ad959be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579385932895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "subnet-0caaf1cf04ad959be",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:subnet/subnet-03fa1dfe658926e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa1dfe658926e66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579385932895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0dbf62bb3b38d5610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "579385932895",
            "id": "subnet-03fa1dfe658926e66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579385932895:vpc/vpc-0dbf62bb3b38d5610",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065428d6422398763",
            "default_route_table_id": "rtb-0a8a57dfd73411574",
            "default_security_group_id": "sg-099f0b3f54ba6ddd2",
            "dhcp_options_id": "dopt-0aee808919386caaf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbf62bb3b38d5610",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8a57dfd73411574",
            "owner_id": "579385932895",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}